ajout de la page reseaux

--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -1,4 +1,7 @@
 @layout('Layouts.main')
+@section('title')
+  <title>Page d'accueil - AWF admin</title>
+@endsection
 @section('contenu')
     <!-- ============================================================== -->
     <div class="card-group">
