--- a/resources/views/thematique.edge
+++ b/resources/views/thematique.edge
@@ -74,8 +74,8 @@
                                             <!--<td>Single Use</td>-->
                                              <td>{{thematique.created_at}}</td>
                                             <td>
-                                              <button type="button" class="btn btn-primary"><a href=" {{ route('ThematiqueController.edit', { id: thematique.id }) }} ">modifier</a></button> 
-                                              <button type="button" class="btn btn-danger"><a href="{{ route('ThematiqueController.delete', { id: thematique.id }) }}">supprimer</a></button>
+                                              <a href=" {{ route('ThematiqueController.edit', { id: thematique.id }) }} "><button type="button" class="btn btn-primary">modifier</button></a> 
+                                              <a href="{{ route('ThematiqueController.delete', { id: thematique.id }) }}"><button type="button" class="btn btn-danger">supprimer</button></a>
                                             </td>
                                         </tr> 
                                     @endeach
