--- a/resources/views/article.edge
+++ b/resources/views/article.edge
@@ -62,151 +62,102 @@
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-                <div class="row">
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-body">
-                                
-                                <div class="form-row">
-                                    <div class="form-group col-md-9">
-                                        <label for="name">Ajouter le titre</label>
-                                        <input type="text" class="form-control" id="name" placeholder="Ecrivez ici">
-                                    </div>
+              <form action="{{ route('Actualite.store') }}" method="POST">
+            {{ csrfField() }}
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            
+                            <div class="form-row">
+                                <div class="form-group col-md-9">
+                                    <label for="title">Ajouter le titre</label>
+                                    <input type="text" class="form-control" id="title" placeholder="Ecrivez ici" name="title">
                                 </div>
-                                <div class="summernote">
-                                    <h4>Default Summernote</h4>
+                            </div>
+                            <textarea class="summernote" name="article">
                                     
-                                </div>
                                 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="email-repeater form-group">
-                    <div data-repeater-list="repeater-group">
-                        <div data-repeater-item class="row m-b-15">
-                            <div class="col-md-10">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="customFile">
-                                <label class="custom-file-label" for="customFile">Choisir un fichier</label>
-                                </div>
-                            </div>
+                            </textarea>
                             
                         </div>
                     </div>
-                    <div class="form-group">
-                        <button class="btn btn-success waves-effect waves-light" type="submit">Publier
-                        </button>
+                </div>
+            </div>
+            <div class="email-repeater form-group">
+                <div data-repeater-list="repeater-group">
+                    <div data-repeater-item class="row m-b-15">
+                        <div class="col-md-10">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="customFile" name="photo">
+                            <label class="custom-file-label" for="customFile">Choisir un fichier</label>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
-                <div class="row">
-                <div class="col-sm-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- title -->
-                            <div class="d-md-flex align-items-center">
-                                <div>
-                                    <h4 class="card-title">Liste des articles</h4>
-                                </div>
-                                <div class="ml-auto">
-                                    <div class="dl">
-                                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                                    </div>
+                <div class="form-group">
+                    <button class="btn btn-success waves-effect waves-light" type="submit">Publier
+                    </button>
+                </div>
+            </div>
+        </form>
+            <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- title -->
+                        <div class="d-md-flex align-items-center">
+                            <div>
+                                <h4 class="card-title">Liste des articles</h4>
+                            </div>
+                            <div class="ml-auto">
+                                <div class="dl">
+                                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                                 </div>
                             </div>
-                            <!-- title -->
                         </div>
-                        <div class="table-responsive">
-                            <table class="table v-middle">
-                                <thead>
-                                    <tr class="bg-light">
-                                        <th class="border-top-0">Titre</th>
-                                        <th class="border-top-0">Date d'ajout</th>
-                                        <th class="border-top-0" width="500">Actions</th>
-                                       <!--  <th class="border-top-0">Technology</th> -->
-                                        <!-- <th class="border-top-0">Tickets</th> -->
-                                       <!--  <th class="border-top-0">Sales</th> -->
-                                        <!-- <th class="border-top-0">Earnings</th> -->
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-danger text-white">EA</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Elite Admin</h4>
-                                                </div>
+                        <!-- title -->
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table v-middle">
+                            <thead>
+                                <tr class="bg-light">
+                                    <th class="border-top-0">Titre</th>
+                                    <th class="border-top-0">Articles</th>
+                                    <th class="border-top-0">photo</th>
+                                    <th class="border-top-0">Date d'ajout</th>
+                                    <th class="border-top-0" width="500">Actions</th>
+                                
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @each(actualite in actualites)
+                                <tr>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <div class="m-r-10">
+                                                <a class="btn btn-circle btn-danger text-white">EA</a>
                                             </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
-                                        <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-info text-white">MA</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Monster Admin</h4>
-                                                </div>
+                                            <div class="">
+                                                <h4 class="m-b-0 font-16">{{actualite.title}}</h4>
                                             </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>Venessa Fern</td> -->
-                                        <td>
-                                             <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-success text-white">MP</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Material Pro Admin</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
-                                        <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-purple text-white">AA</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Ample Admin</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
-                                        <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                                        </div>
+                                    </td>
+                                    <td>{{actualite.article}}</td>
+                                    <td>{{actualite.photo}}</td>
+                                    <td>{{actualite.created_at}}</td> 
+                                    <td>
+                                        <a href="{{ route('ActualiteController.edit', { id: actualite.id }) }}"> <button type="button" class="btn btn-primary">modifier</button></a>  
+                                      <a href="{{ route('ActualiteController.delete', { id: actualite.id }) }}">  <button type="button" class="btn btn-danger">supprimer</button>
+                                    </td>
+                                </tr>
+                                @endeach
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+            </div>
             </div>
             
             
