--- a/resources/views/speakers.edge
+++ b/resources/views/speakers.edge
@@ -10,27 +10,26 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Remplissez les champs ci-dessous</h4>
-                    <form class="m-t-20" action="{{route('speaker.store')}}" method="POST" enctype="multipart/form-data"> 
+                    <form class="m-t-20" action="{{route('SpeakerController.store')}}" method="POST" enctype="multipart/form-data"> 
                         {{ csrfField() }}
                             <div class="">
                                 <div class="form-group">
                                     <label for="name">Nom du speaker</label>
-                                    <input type="text" class="form-control" id="name" placeholder="Nom du speaker">
+                                    <input type="text" class="form-control" id="name" placeholder="Nom du speaker" name="nom">
                                 </div>
                                 <div class="form-group">
                                     <label for="fonction">Sa fonction</label>
-                                    <input type="email" class="form-control" id="fonction" placeholder="fonction">
+                                    <input type="text" class="form-control" id="fonction" placeholder="fonction" name="fonction">
                                 </div>
                                 <div class="email-repeater form-group">
                                     <div data-repeater-list="repeater-group">
                                         <div data-repeater-item class="row m-b-15">
                                             <div class="col-md-10">
                                                 <div class="custom-file">
-                                                    <input name="image" type="file" class="custom-file-input" id="customFile">
-                                                    <label class="custom-file-label" for="customFile" >Choisir une image de speaker</label>
+                                                    <input type="file" class="custom-file-input" id="customFile" name="photo">
+                                                <label class="custom-file-label" for="customFile">Choisir un fichier</label>
                                                 </div>
                                             </div>
-                                            
                                         </div>
                                     </div>
                     
@@ -73,6 +72,8 @@
                                     <tr class="bg-light">
                                         <th class="border-top-0">Nom</th>
                                         <th class="border-top-0">fonction</th>
+                                        <th class="border-top-0">photo</th>
+                                        <th class="border-top-0" width="500">Date d'ajout</th>
                                         <th class="border-top-0" width="500">Actions</th>
                                        <!--  <th class="border-top-0">Technology</th> -->
                                         <!-- <th class="border-top-0">Tickets</th> -->
@@ -81,6 +82,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    @each(speaker in speakers)
                                     <tr>
                                         <td>
                                             <div class="d-flex align-items-center">
@@ -88,71 +90,19 @@
                                                     <a class="btn btn-circle btn-danger text-white">EA</a>
                                                 </div>
                                                 <div class="">
-                                                    <h4 class="m-b-0 font-16">Elite Admin</h4>
+                                                    <h4 class="m-b-0 font-16">{{speaker.name}}</h4>
                                                 </div>
                                             </div>
                                         </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
+                                        <td>{{speaker.fonction}}</td>
+                                        <td>{{speaker.photo}}</td>
+                                        <td>{{speaker.created_at}}</td> 
                                         <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
+                                         <a href="{{ route('SpeakerController.edit', { id: speakers.id }) }}"> <button type="button" class="btn btn-primary">modifier</button></a>  
+                                          <a href="{{ route('SpeakerController.delete', { id: speakers.id }) }}"><button type="button" class="btn btn-danger">supprimer</button></a>  
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-info text-white">MA</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Monster Admin</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>Venessa Fern</td> -->
-                                        <td>
-                                             <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-success text-white">MP</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Material Pro Admin</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
-                                        <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="m-r-10">
-                                                    <a class="btn btn-circle btn-purple text-white">AA</a>
-                                                </div>
-                                                <div class="">
-                                                    <h4 class="m-b-0 font-16">Ample Admin</h4>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>Single Use</td>
-                                        <!-- <td>John Doe</td> -->
-                                        <td>
-                                            <button type="button" class="btn btn-primary">modifier</button>
-                                            <button type="button" class="btn btn-danger">supprimer</button>
-                                        </td>
-                                    </tr>
+                                    @endeach
                                 </tbody>
                             </table>
                         </div>
