--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -18,7 +18,7 @@
                        Utilisateurs
                     </div>
                     <div class="ml-auto">
-                        <h2 class="m-b-0 font-light">23</h2>
+                        <h2 class="m-b-0 font-light">{{totalUsers}}</h2>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
 
                     </div>
                     <div class="ml-auto">
-                        <h2 class="m-b-0 font-light">113</h2>
+                        <h2 class="m-b-0 font-light">{{totalActu}}</h2>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
 
                     </div>
                     <div class="ml-auto">
-                        <h2 class="m-b-0 font-light">43</h2>
+                        <h2 class="m-b-0 font-light">{{totalSpeakers}}</h2>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
 
                     </div>
                     <div class="ml-auto">
-                        <h2 class="m-b-0 font-light">63</h2>
+                        <h2 class="m-b-0 font-light">{{totalThematique}}</h2>
                     </div>
                 </div>
             </div>
