--- a/resources/views/partials/side-menu.edge
+++ b/resources/views/partials/side-menu.edge
@@ -12,7 +12,7 @@
                             <img src="../../assets/images/users/1.jpg" alt="users" class="rounded-circle img-fluid" />
                         </div>
                         <div class="user-content hide-menu m-t-10">
-                            <h5 class="m-b-10 user-name font-medium">Handon simon</h5>
+                        <h5 class="m-b-10 user-name font-medium">{{ auth.user.username }}</h5>
                        </div>
                     </div>
                     <!-- End User Profile-->
