--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -49,7 +49,7 @@
                     <!-- Form -->
                     <div class="row">
                         <div class="col-12">
-                            <form class="form-horizontal m-t-20" id="loginform" action="{{ route('LoginController.login') }}" method="POST">
+                            <form class="form-horizontal m-t-20" id="loginform" action="{{ route('loginUser') }}" method="POST">
                                     {{ csrfField() }}
                                     @if(hasErrorFor('email'))
                                 <span>
